--- a/news/templates/news/news_list.html
+++ b/news/templates/news/news_list.html
@@ -29,7 +29,7 @@
     {% for item in posts%}
 
             <div class="col-lg-4 mt-4">
-                <a href="{% url 'news_detail_url' slug=item.slug %}"><div class="img-wrap"><img src="{{ item.image.url }}" alt="Preview" class="img-fluid shadow-lg"></div></a>
+                <a href="{% url 'news_detail_url' slug=item.slug %}"><div class="img-wrap"><img src="{{ item.image }}" alt="Preview" class="img-fluid shadow-lg"></div></a>
             </div>
 
             <div class="col-lg-8  mb-3 mt-4 " >
