--- a/news/templates/news/news_detail.html
+++ b/news/templates/news/news_detail.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <h1 class="post-title">{{ post.title }}</h1>
-                <div class=""><img src="{{ post.image.url }}" class="img-warp img-fluid" alt="Исходник"></div>
+                <div class=""><img src="{{ post.image }}" class="img-warp img-fluid" alt="Исходник"></div>
                 <p class="mt-3" style="white-space: pre-line">{{ post.body|safe }}</p>
         </div>
     </div>
