--- a/news/templates/reviews/review_detail.html
+++ b/news/templates/reviews/review_detail.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <h1 class="post-title">{{ review.title }}</h1>
-                <div class=""><img src="{{ review.image.url }}" class="img-warp img-fluid" alt="Исходник"></div>
+                <div class=""><img src="{{ review.image }}" class="img-warp img-fluid" alt="Исходник"></div>
                 <p class="mt-3">{{ review.body|safe }}</p>
         </div>
     </div>
