--- a/news/templates/reviews/reviews_list.html
+++ b/news/templates/reviews/reviews_list.html
@@ -30,7 +30,7 @@
         <div class="col-md-4 mt-5 mb-5">
             <div class="descr-wrap">
                 <a href="{% url 'review_detail_url' slug=item.slug %}"><span class="descr">{{ item.title }}
-                   </span><img src="{{ item.image.url }}" alt="" > <div class="inl">{{ item.body|safe|truncatewords_html:5}}</div></a>
+                   </span><img src="{{ item.image }}" alt="" > <div class="inl">{{ item.body|safe|truncatewords_html:5}}</div></a>
             </div>
         </div>
     {% endfor %}
