--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@ body {
     font-size: 14px;
     font-family: 'Istok Web', sans-serif;
     /*background-color: #4a4a4a;*/
-    background: url(../img/bg.jpg) right center no-repeat;
+    background: url(../img/bg.jpg) right top no-repeat;
     background-attachment: fixed;
 
 
