--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,10 @@
 
     <link rel="stylesheet" href="{% static 'css/news_list_style.css' %}">
 
+    <!-- ICO-->
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
 
-
-        <title>{% block title %}IKIGEAR{% endblock %}</title>
+    <title>{% block title %}IKIGEAR{% endblock %}</title>
 
 </head>
 <body>
