--- a/news/templates/reviews/review_detail.html
+++ b/news/templates/reviews/review_detail.html
@@ -39,7 +39,8 @@
 
                 <h1 class="post-title">{{ review.title }}</h1>
                 <div class=""><img src="{{ review.image }}" class="img-warp img-fluid" alt="Исходник"></div>
-                <p class="mt-3">{{ review.body|safe }}</p>
+
+            <div class="txt_body"><p class="mt-3">{{ review.body|safe }}</p></div>
         </div>
     </div>
 {% endblock %}
