--- a/news/templates/news/news_detail.html
+++ b/news/templates/news/news_detail.html
@@ -41,7 +41,8 @@
 
                 <h1 class="post-title">{{ post.title }}</h1>
                 <div class=""><img src="{{ post.image }}" class="img-warp img-fluid" alt="Исходник"></div>
-                <p class="mt-3" style="white-space: pre-line">{{ post.body|safe }}</p>
+
+                <div class="txt_body"><p class="mt-3" style="white-space: pre-line">{{ post.body|safe }}</p> </div>
         </div>
     </div>
 {% endblock %}
