--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" href="#">Live</a>
-                                    <a class="dropdown-item" href="#">Мерч</a>
+                                    <a class="dropdown-item" href="{% url 'not_working_url' %}">Мерч</a>
                                 </div>
                             </li>
 
@@ -110,7 +110,7 @@
     </section>
 {% endblock %}
 
-    <section>
+    <section class="op_del">
         <div class="container bg-l " style="border: 2px #000 solid;">
             <div class="row">
 
@@ -136,7 +136,7 @@
         </div>
 
     </section>
-
+    {% block foot %}
     <footer>
         <div class="container">
             <div class="row">
@@ -146,6 +146,8 @@
             </div>
         </div>
     </footer>
+    {% endblock %}
+
 
 
 
