--- a/news/templates/working/not_working.html
+++ b/news/templates/working/not_working.html
@@ -24,6 +24,31 @@
             display: none;
             opacity: 0;
         }
+
+        @media only screen and (max-width: 991px) {
+            h1{
+                font-size: 2rem;
+            }
+            h3{
+                font-size: 1.5rem;
+            }
+        }
+        @media only screen and (max-width: 768px) {
+            h1{
+                font-size: 1.5rem;
+            }
+            h3{
+                font-size: 1.25rem;
+            }
+        }
+    @media only screen and (max-width: 480px) {
+        h1{
+                font-size: 1.25rem;
+            }
+            h3{
+                font-size: 1rem;
+            }
+    }
     </style>
 {% endblock %}
 
