--- a/static/css/style.css
+++ b/static/css/style.css
@@ -127,8 +127,9 @@ section {
     color: black;
     background-color: #FFF;
     margin: 0;
-    border: 3px black solid;
-    height: 172px;
+    border: 2px black solid;
+    height: 100%;
+    width: 270px;
 
 }
 
