--- a/templates/base.html
+++ b/templates/base.html
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 foot">
-                    <p>IKIGEAR 2019 ©</p>
+                    <p>IKIGEAR 2019-2020 ©</p>
                 </div>
             </div>
         </div>
